# publications-server

./: Dockerfile  README.md  docker-compose-dev.yml  pyproject.toml
.github/workflows/: build.yml
app/core/models/pydantic/: __init__.py  author.py  generic.py  publication.py
app/core/models/tortoise/: __init__.py  author.py  publication.py
app/core/routers/: __init__.py  author.py  generic.py  publication.py
app/utils/api/: router.py
tests/test_api/: test_server_health.py
tests/test_utils/: test_api_router.py
